css/styles.css
body {
    background-color: white;
}

a:link, a:visited, a:active {
	color: blue;
	text-decoration: none;
}

nav a:link, nav a:visited, nav a:active {
	text-align: center;
}

a href {
	font-style: italic;
}

li {
	float: left;
	padding: 0.1em;
	width: 100%;
}

hr {
width: 100%;
margin-top: 1em;
}

nav li {
	list-style: none;
	display: block;
	float: left;
	padding: 0.3em;
	border: 0;
	margin: 0;
	font-size: 1.0em;
	text-align: center;
}

* {
	box-sizing: border-box;
}

nav ul {
	display: flex;
	flex-direction: column;
	width: 100%;
	margin: 0;
	padding: 0;
	border: 0;
}

@media (min-width: 30em) {
  nav ul {
    width: 100%;
    flex-direction: row;
  }
  nav li {
    margin: 0.3em;
    font-size: 1.0em;
    padding: 0;
    text-align: left;
  }
}

